# blog

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: test.yml
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_blog_views.py
blogs/templatetags/: markdown_extras.py
blogs/tests/unit/: test_blogs_urls.py  test_blogs_views.py
project/: settings.py  storage_backends.py  urls.py
static/css/: blog_detail.css  blog_index.css  footer.css  global.css  header.css  input.css  styles.css
templates/blogs/: blog-detail.html  index.html
templates/layouts/: base.html
templates/partials/: footer.html  header.html
