[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Chester Jeff Ancheta blogs"
authors = ["Chester Jeff Ancheta <cjancheta@usm.edu.ph>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
