[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Chester Jeff Ancheta blogs"
authors = ["Chester Jeff Ancheta <cjancheta@usm.edu.ph>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
django = "^5.0.6"
environs = "^11.0.0"
dj-database-url = "^2.2.0"
pytest-django = "^4.8.0"
pillow = "^10.4.0"
markdown = "^3.6"
gunicorn = "^22.0.0"
boto3 = "^1.35.21"
django-storages = "^1.14.3"
django-cors-headers = "^4.4.0"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
django-summernote = "^0.8.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
exclude = ["*migrations*", "*tests*"]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = ["E", "F"]
lint.ignore = ["E501", "E741"]

[tool.djlint]
profile = "django"
indent = 2
ignore = "H030,H031"

[tool.coverage.run]
omit = [
  ".venv/*",
  "**/tests/*",
  "**/conftest.py",
  "**/test_*.py",
  "**/__tests__/*",
  "**/migrations/*",
  "**/settings.py",
  "**/wsgi.py",
  "**/asgi.py",
  "**/manage.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "if self.debug",
  "if settings.DEBUG",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
